plugins/devkit/testData/inspections/presentation/InvalidIconConcatenation.java
import com.intellij.ide.presentation.Presentation;

@Presentation(icon = <error descr="Cannot resolve symbol 'InvalidIconPath'">"Invalid" + "Icon" + "Path"</error>)
public class InvalidIconConcatenation {
}